[build-system]
requires = [
  "poetry==1.0.9"
]
build-backend = "poetry.masonry.api"

[tool.poetry]
authors = [
  "Kevin Amado <kamadorueda@gmail.com>",
]
classifiers = [
  "Development Status :: 4 - Beta",
]
description = ""
license = "MIT"
name = "aioextensions"
packages = [
  { include = "aioextensions", from = "src" },
]
readme = "./README.md"
repository = "https://github.com/kamadorueda/aioextensions"
version = "1.0.0"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
bandit = "1.6.2"
mypy = "0.782"
prospector = "1.3.0"
pydeps = "1.9.4"
pytest = "5.4.3"
pytest-asyncio = "0.14.0"
pytest-cov = "2.10.0"
sphinx = "3.2.0"
