[build-system]
requires = [
  "poetry==1.0.9"
]
build-backend = "poetry.masonry.api"

[tool.poetry]
authors = [
  "Kevin Amado <kamadorueda@gmail.com>",
]
classifiers = [
  "Development Status :: 6 - Mature",
  "Framework :: AsyncIO",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
description = "High performance functions to work with the async IO"
documentation = "https://kamadorueda.github.io/aioextensions"
homepage = "https://kamadorueda.github.io/aioextensions"
include = [
  "test/**/*",
]
license = "MIT"
name = "aioextensions"
packages = [
  { include = "aioextensions", from = "src" },
]
readme = "./README.md"
repository = "https://github.com/kamadorueda/aioextensions"
version = "1.0.0"

[tool.poetry.dependencies]
python = "^3.6"
uvloop = "*"

[tool.poetry.dev-dependencies]
bandit = "1.6.2"
mypy = "0.782"
prospector = "1.3.0"
pdoc3 = "0.8.4"
pydeps = "1.9.4"
pytest = "5.4.3"
pytest-asyncio = "0.14.0"
pytest-cov = "2.10.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kamadorueda/aioextensions/issues"
